--- a/src/components/style/cards.scss
+++ b/src/components/style/cards.scss
@@ -11,6 +11,12 @@
         grid-template-columns: auto auto auto;
         gap: 1.5rem;
         padding: 1.5rem;
+
+        & > hr{
+           display: none;            
+        }
+        
+        
     }
 }
 
@@ -27,7 +33,15 @@
         display: flex;
         flex-direction: column;
         padding: 1rem;
-            
+
+        & > hr{
+            display: block;
+            height: 2px;
+            border-radius: 1rem;
+            background-color: rgba(245,245,245,0.9);
+            border: none;
+            margin: 0.2rem;                
+        }
     }
 }
 }
