--- a/src/components/style/main.scss
+++ b/src/components/style/main.scss
@@ -124,9 +124,22 @@
 // Media Queries -----------------------------
 
 @media only screen and (max-width: 600px){
+
     .main{
         height: 40vh;
         min-height: 400px;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+
+        & > img{
+            width: 100%;
+            height:100%;
+            margin-top: 0;
+            
+        }
     }
     .main-overlay{
     
@@ -185,6 +198,16 @@
 @media only screen and (min-width: 601px) and (max-width:1000px){
     .main{
         min-height: 650px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        & > img{
+            width: auto;
+            height:100%;
+            margin-top: 0;
+            
+        }
     }
 
     .main-overlay{
